Wrap text in nuggets Close https://github.com/certsocietegenerale/FIR/issues/249

--- a/fir_nuggets/static/fir_nuggets/nuggets.css
+++ b/fir_nuggets/static/fir_nuggets/nuggets.css
@@ -44,5 +44,6 @@
 }
 
 .nugget_interpretation {
-	white-space: pre;
+	white-space: pre-wrap;
+	word-break: break-all;
 }
